@@ -1,5 +1,12 @@
 2004-06-10  Dennis Smit  <ds@nerds-incorporated.org>
 
+	* gweather-applet.c (clicked_cb):
+
+	Single click to popup forecast:
+	http://developer.gnome.org/projects/gup/hig/1.0/userinput.html#mouse-interaction-applets
+
+2004-06-10  Dennis Smit  <ds@nerds-incorporated.org>
+
 	* gweather-dialog.c (gweather_dialog_open):
 
 	Present the forecast dialog when it's reselected
